# fat-macho-rs

./: .gitignore  Cargo.toml  README.md
.builds/: freebsd.yml  openbsd.yml
.github/workflows/: CI.yml  Python.yml
python/: Cargo.toml  Dockerfile  README.md  fat_macho.pyi  pyproject.toml
python/src/: lib.rs
src/: error.rs  lib.rs  read.rs  write.rs
tests/fixtures/: hellofat  simplefat  simplefat.dylib  thin_arm64  thin_arm64.bc  thin_x86_64  thin_x86_64.bc
