[package]
name = "fat-macho"
version = "0.4.3"
authors = ["messense <messense@icloud.com>"]
description = "Mach-O Fat Binary Reader and Writer"
keywords = ["fat", "mach", "macho", "universal", "universal2"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/messense/fat-macho-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.4"
llvm-bitcode = "0.1.1"
