[package]
name = "fat-macho"
version = "0.4.2"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fat_macho"
crate-type = ["cdylib"]

[dependencies]
fat-macho-rs = { package = "fat-macho", version = "0.4", path = ".." }
pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }
