[package]
name = "py-fat-macho"
version = "0.4.7"
authors = ["messense <messense@icloud.com>"]
description = "Mach-O fat binary writer"
edition = "2018"
license = "MIT"
keywords = ["fat", "mach", "macho"]
readme = "README.md"
homepage = "https://github.com/messense/fat-macho-rs"
repository = "https://github.com/messense/fat-macho-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fat_macho"
crate-type = ["cdylib"]

[dependencies]
fat-macho-rs = { package = "fat-macho", version = "0.4.2" }
pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }

[package.metadata.maturin]
name = "fat-macho"
